titel auf portugiesisch

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: My blog
-description: My very nice blog
+title: Uma vez em portugal
+description: Uma viagem por portugal
 author: "Rebecca Ehlers"
 
 theme: minima
