--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,10 @@ rss: rss
 # Minima: show excerpts in the frontpage
 show_excerpts: true
 
+# Pagination
+paginate: 6
+paginate_path: /page:num/
+
 minima:
   date_format: "%Y-%m-%d"
 
