--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ minima:
 
 # Minima: custom header links
 header_pages:
-  - _pages/frontpage.md
+  - _pages/index.html
   - _pages/about.md
   - _pages/archive.md
   - _pages/categories.md
