--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ show_excerpts: true
 
 # Pagination
 paginate: 3
-paginate_path: "page:num"
+paginate_path: "_pages/page:num"
 
 minima:
   date_format: "%Y-%m-%d"
