--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,10 @@ description: Uma viagem por portugal
 author: "Rebecca Ehlers"
 
 theme: minima
-plugins: [jekyll-paginate]
 
 base_url: /uma-vez-em-portugal
 repository: beccarei/uma-vez-em-portugal
-#permalink: /:categories/:title/
+permalink: /:categories/:title/
 
 
 # Minima social links
@@ -17,10 +16,6 @@ rss: rss
 
 # Minima: show excerpts in the frontpage
 show_excerpts: true
-
-# Pagination
-paginate: 3
-paginate_path: "_pages/page:num"
 
 minima:
   date_format: "%Y-%m-%d"
