--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ linkedin_username: rebecca-ehlers-4235b3231
 rss: rss
 
 # Minima: show excerpts in the frontpage
-show_excerpts: true
+show_excerpts: false
 
 minima:
   date_format: "%Y-%m-%d"
