--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ description: Uma viagem por portugal
 author: "Rebecca Ehlers"
 
 theme: minima
+plugins: jekyll-paginate
 
 base_url: /uma-vez-em-portugal
 repository: beccarei/uma-vez-em-portugal
@@ -16,6 +17,8 @@ rss: rss
 
 # Minima: show excerpts in the frontpage
 show_excerpts: false
+paginate: 5
+paginate_path: "/page:num/"
 
 minima:
   date_format: "%Y-%m-%d"
