plugin is a string

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Uma viagem por portugal
 author: "Rebecca Ehlers"
 
 theme: minima
-plugins: jekyll-paginate
+plugins: "jekyll-paginate"
 
 base_url: /uma-vez-em-portugal
 repository: beccarei/uma-vez-em-portugal
