--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,9 @@ title: Uma vez em portugal
 description: Uma viagem por portugal
 author: "Rebecca Ehlers"
 
+# remote_theme: "mmistakes/so-simple-theme@3.2.0"
 remote_theme: "mmistakes/so-simple-theme@3.2.0"
-plugins: [jekyll-paginate]
+# plugins: [jekyll-paginate]
 
 base_url: /uma-vez-em-portugal
 repository: beccarei/uma-vez-em-portugal
@@ -17,8 +18,8 @@ rss: rss
 
 # Minima: show excerpts in the frontpage
 show_excerpts: false
-paginate: 5
-paginate_path: "/page:num/"
+# paginate: 5
+# paginate_path: "/page:num/"
 
 minima:
   date_format: "%Y-%m-%d"
