--- a/_config.yml
+++ b/_config.yml
@@ -1,42 +1,108 @@
-title: Uma vez em portugal
-description: Uma viagem por portugal
-author: "Rebecca Ehlers"
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
-# remote_theme: "mmistakes/so-simple-theme@3.2.0"
-remote_theme: "mmistakes/so-simple-theme@3.2.0"
-# plugins: [jekyll-paginate]
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+# theme: jekyll-theme-so-simple
+remote_theme: mmistakes/so-simple-theme
+skin: "/assets/css/skins/default.css"
+locale: en-US
+title: "My Awesome Site"
+description: "It really is the best."
+baseurl: # the subpath of your site, e.g. "/blog"
+url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+logo: "portugal.png"
+# <a href="https://www.flaticon.com/free-icons/portugal" title="portugal icons">Portugal icons created by Anditii Creative - Flaticon</a>
+date_format: "%B %-d, %Y"
+read_time: # reading time estimates, e.g. true
+words_per_minute: # 200
+mathjax:
+  enable: # MathJax equations, e.g. true, false (default)
+  combo:  # "tex-svg" (default), "tex-mml-chtml", etc.: docs.mathjax.org/en/latest/web/components/combined.html
+  tags:  # "none", "ams" (default), "all"
+google_fonts:
+  - name: "Source Sans Pro"
+    weights: "400,400i,700,700i"
+  - name: "Lora"
+    weights: "400,400i,700,700i"
+google_analytics: # Google Analytics id, e.g. "UA-NNNNNNNN-N"
+disqus:
+  shortname: # Disqus shortname, e.g. "my_disqus_shortname"
+twitter:
+  username: # site's Twitter username, e.g. "mmistakes"
 
-base_url: /uma-vez-em-portugal
-repository: beccarei/uma-vez-em-portugal
+# Liquid
+liquid:
+  error_mode: strict
+
+# Build settings
 permalink: /:categories/:title/
+markdown: kramdown
+feed:
+  path: atom.xml
 
+# Pagination - https://jekyllrb.com/docs/pagination/
+paginate: 4
+paginate_path: /page:num/
 
-# Minima social links
-github_username: beccarei
-linkedin_username: rebecca-ehlers-4235b3231
-rss: rss
+# Search
+search_full_content: false # can have performance implications for large sites
 
-# Minima: show excerpts in the frontpage
-show_excerpts: false
-# paginate: 5
-# paginate_path: "/page:num/"
+# Taxonomy pages
+category_archive_path: "/categories/#"
+tag_archive_path: "/tags/#"
 
-minima:
-  date_format: "%Y-%m-%d"
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
 
-# Minima: custom header links
-header_pages:
-  - _pages/about.md
-  - _pages/archive.md
-  - _pages/categories.md
+plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
+  - jekyll-paginate
 
-include:
-    - _pages
+# Front Matter Defaults
+defaults:
+  # Posts defaults
+  - scope:
+      path: "_posts"
+      type: posts
+    values:
+      layout: post
+      share: true
 
-exclude: 
-    - .gitignore
-    - docker-compose.yml
-    - Gemfile
-    - Gemfile.lock
-    - LICENSE
-    - README.md
+# Site Author
+author:
+  name:
+  picture:
+  email:
+  twitter:
+  links:
+    - title:
+      url:
+      icon:
+
+# Footer Links
+footer_links:
+  - title: Feed
+    url: atom.xml
+    icon: fas fa-rss-square
