--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 # theme: jekyll-theme-so-simple
 remote_theme: mmistakes/so-simple-theme
-skin: "/assets/css/skins/light.css"
+skin: "/assets/css/skins/default.css"
 locale: en-US
 title: "Uma vez em Portugal"
 description: "Travelling through Portugal"
