--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,8 @@
   url: /categories/
 - title: Tags
   url: /tags/
+- title: About
+  url: /about/
 # - title: Recipes
 #   url: /recipes/
 # - title: Search
