testing social links

--- a/_config.yml
+++ b/_config.yml
@@ -92,10 +92,10 @@ defaults:
 
 # Site Author
 author:
-  name:
+  name: Rebecca
   picture:
   email:
-  twitter:
+  twitter: beccarei
   links:
     - title:
       url:
